WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313940
[Flex] min-content sized flex item should not be scrollable
https://bugs.webkit.org/show_bug.cgi?id=313940
Summary
[Flex] min-content sized flex item should not be scrollable
alan
Reported
2026-05-03 17:21:12 PDT
ssia
Attachments
[fast-cq]Patch
(11.02 KB, patch)
2026-05-03 17:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-03 17:25:09 PDT
Created
attachment 479456
[details]
[fast-cq]Patch
EWS
Comment 2
2026-05-04 05:32:16 PDT
Committed
312517@main
(7eb5ac55cccd): <
https://commits.webkit.org/312517@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479456
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-05-04 05:33:11 PDT
<
rdar://problem/176173688
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug