[Flex] min-content sized flex item should not be scrollable https://bugs.webkit.org/show_bug.cgi?id=313940

Reviewed by Antti Koivisto.

The flex spec says that when a flex item has min-height: auto (initial value) and
its overflow is scrollable, the automatic minimum size is zero.
This lets scrollable boxes shrink freely. But this overflow exception only
applies to the "auto" keyword - the automatic minimum size.

The code was also applying this exception to explicit min-height: min-content,
max-content, and fit-content values. CSS Sizing 3 says these keywords are
equivalent to auto for block sizes, so the code treated them identically. But
"equivalent for resolution" does not mean "subject to the same override." When an
author explicitly writes min-height: min-content, they want the box to be at
least as tall as its content. The overflow exception should not zero it out.

The fix separates the two paths: explicit min-content/max-content/fit-content on
the block axis always returns true (content-based minimum applies), while auto
still goes through the overflow check.

Also renamed shouldApplyMinSizeAutoForFlexItem to useContentBasedMinimumSize
since it now covers explicit content-based keywords too, and removed the unused
shouldApplyMinBlockSizeAutoForFlexItem.

Tests: imported/w3c/web-platform-tests/css/css-flexbox/flex-item-min-height-min-content-overflow.html

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeSizingKeywordLogicalContentHeightUsing):
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::useContentBasedMinimumSize):
(WebCore::RenderFlexibleBox::useContentBasedMinimumBlockSize):
(WebCore::RenderFlexibleBox::computeFlexItemMinMaxSizes):
(WebCore::RenderFlexibleBox::flexItemNeedsLayoutForSizing const):
* Source/WebCore/rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/312517@main